--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,11 @@
 {
     "short_name": "Twittor",
-    "name": "Twittor para heroes",
+    "name": "Twittor para héroes",
     "start_url": "index.html",
     "background_color": "#3498db",
     "theme_color": "#3498db",
     "display": "standalone",
+    "orientation": "portrait",
     "icons": [
         {
             "src": "img/icons/icon-72x72.png",
@@ -47,5 +48,6 @@
             "sizes": "512x512"
         }
       ]
+
 
 }
