--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
     "short_name": "Twittor",
-    "name": "Twittor para héroes",
+    "name": "Twittor para heroes",
     "start_url": "index.html",
     "background_color": "#3498db",
     "theme_color": "#3498db",
     "display": "standalone",
-    "orientation": "portrait",
     "icons": [
         {
             "src": "img/icons/icon-72x72.png",
@@ -48,6 +47,5 @@
             "sizes": "512x512"
         }
       ]
-
 
 }
